[package]
name = "pur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# git2 = "0.15.0"
clap = { version = "3.2.20", features = ["unstable-doc"] }

[profile.release]
strip = "debuginfo"
opt-level = 2
overflow-checks = false
