[package]
name = "pur"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["unstable-doc"] }

[profile.release]
strip = true
panic = "abort"
opt-level = "z"
overflow-checks = false
lto = true
